Create REST API Master Item Processing
